@@ -6,6 +6,10 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.40.00
 
+              pnmtops: fix crash when program attempts to write 12 bits per
+              sample Postscript.  It doesn't really know how to do that, so
+              now it just writes 8.
+
               pamfunc: Add -andmask, -ormask, -xormask, -not,
               -shiftleft, -shiftright.
 
